# BaseDeDatos2024

./: .env.example  .gitignore  .gitmodules  README.md  Te voy a pasar un diccionario en donde l.dart  docker-compose.yml  load_gtfs_data.sql  pyproject.toml  requirements.txt
Clases/01/: Clase.ipynb
Clases/01_Bases_De_Datos/: Clase.ipynb  Dockerfile  Instrucciones.ipynb  PostgreSQL.ipynb  docker-compose.yml  introduccion.ipynb  load_gtfs_data.sql  pipeline.py  pyproject.toml
Clases/01_Bases_De_Datos/Ejercicio/: Ejercicio_Clase1.ipynb  docker-compose.yml  pyproject.toml  requirements.txt
Clases/02_Orquestacion/: 03.Orquestación.ipynb  clase02.md  docker-compose.yml
Clases/04_DataWarehouses/: DuckDB.ipynb
Clases/04_NocoDB/: docker-compose.yml
Clases/06_Transformacion/: 01_DBT.ipynb  02_DBT_Avanzado.ipynb
docker-entrypoint-initdb/: 1-gtfs_schema.sql  2-load_gtfs_data.sql
gtfs/: io_config.yaml  metadata.yaml  test.py
gtfs/data_exporters/: upload_agency.py  upload_positions.py  upload_static_agency.py  upload_static_calendar_dates.py  upload_static_routes.py  upload_static_shapes.py  upload_static_stop_times.py  upload_static_stops.py  upload_static_trips.py  upload_trip_updates.py
gtfs/data_loaders/: download_gtfs_realtime.py  load_agency.py  load_static_agency.py  load_static_calendar_dates.py  load_static_routes.py  load_static_shapes.py  load_static_stop_times.py  load_static_stops.py  load_static_trips.py
gtfs/pipelines/test/: metadata.yaml
inicializacion/: gtfs_schema.sql
mage_data/gtfs/: mage-ai.db
ml_transformations/: dbt_project.yml
(+285 files in other folders)
